fixed overflow

--- a/css/more.css
+++ b/css/more.css
@@ -9,6 +9,7 @@
     display: flex;
     align-items: center;
     gap: 0 40px;
+    overflow: hidden;
 }
 .more-content {
     transform: translateX(-20%);
