--- a/css/top.css
+++ b/css/top.css
@@ -7,7 +7,9 @@
     max-width: 100%;
     position: relative;
 }
-.top-inner{}
+.top-inner{
+    overflow: hidden;
+}
 .top-content {
     position: absolute;
     bottom: 20px;
